# swagger.yaml
@@ -34,6 +34,23 @@ paths:
             type: array
             #items:
             #  $ref: '#/definitions/Account'
+    post:
+      tags: [Accounts]
+      operationId: app.create_account
+      summary: Create an account
+      parameters:
+        - name: account
+          description: Account is an organization or individual
+          in: body
+          schema:
+            $ref: '#/definitions/Account'
+      responses:
+        200:
+          description: Account created
+          schema:
+            $ref: '#/definitions/Account'
+        409:
+          description: Account with specified name already exists
   /accounts/{account_name}:
     get:
       tags: [Accounts]
@@ -48,20 +65,6 @@ paths:
             $ref: '#/definitions/Account'
         404:
           description: Account does not exist
-    post:
-      tags: [Accounts]
-      operationId: app.create_account
-      summary: Create an account
-      parameters:
-        - $ref: '#/parameters/account_name'
-        - $ref: '#/parameters/account_type'
-      responses:
-        200:
-          description: Account created
-          schema:
-            $ref: '#/definitions/Account'
-        409:
-          description: Account with specified name already exists
     put:
       tags: [Accounts]
       operationId: app.update_account
@@ -134,21 +137,14 @@ parameters:
     in: path
     type: string
     required: true
-    pattern: "^[a-zA-Z0-9-_]+$"
-  account_type:
-    name: account_type
-    description: Account is an organization or individual
-    in: query
-    type: string
-    required: false
-    pattern: "^[a-zA-Z0-9-_]+$"
+    pattern: "^[a-zA-Z0-9-_]{3,30}$"
   member_id:
     name: member_id
     description: Member's account ID
     in: path
     type: string
     required: true
-    pattern: "^[a-zA-Z0-9-_]+$"
+    pattern: "^[a-zA-Z0-9-_]{3,30}$"
 
 
 definitions:
@@ -156,19 +152,20 @@ definitions:
     type: object
     required:
       - _name
-      - _id
     properties:
       _id:
         type: string
         description: Unique identifier
+        pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$"
         example: "7ebf7fa9-f70f-481a-a499-5fba3f8c5078"
         readOnly: true
       _name:
         type: string
         description: Account's name
+        pattern: "^[a-zA-Z0-9-_]{3,30}$"
         example: "junjun-zhang"
-        minLength: 1
-        maxLength: 100
+        minLength: 3
+        maxLength: 30
       tags:
         type: object
         description: Custom tags
